manifests/workloads/gaming/palworld/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: palworld-server
  name: palworld-server
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.0.3.30
spec:
  ports:
    - name: server
      port: 8211
      protocol: UDP
      targetPort: server
    - name: query
      port: 27015
      protocol: UDP
      targetPort: query
  selector:
    app: palworld-server
  type: LoadBalancer
