manifests/workloads/gaming/palworld/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: palworld-public
  namespace: gaming
spec:
  # tls:
  #   - secretName: secret-zelesny-com
  rules:
    - host: palworld.zelesny.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/*"   # "*" is needed. Without this, the UI Javascript and CSS will not load properly
            backend:
              service:
                name: palworld-server
                port:
                  number: 8211
